--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Amit Yadav"
+author: "Amit Yadav"
+description: "I'm a software engineer (C/C++) since 2017" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "amityadav381@gmail.com"
+twitter_username: "Imbakka"
+github_username: "amityadav381"
+linkedin_username: "--"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
 #pinterest_username: username
-#youtube_username: username
+youtube_username: "AmitYadav-rp3ot"
 #googleplus_username: +username
 
 #########################################################################################
