--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Amit Yadav"
-author: "Amit Yadav"
-description: "I'm a software engineer since 2017" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+#author: "Amit Yadav"
+#description: "" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
